--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -1,34 +1,37 @@
-  <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" [routerLink]="['home']">
-        <!-- <img src="assets/images/logo.jpg" width="150" height="80" alt=""> -->
-        CAR RENTAL SERVICE 
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['home']"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['deal-create']">Create Deal </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['deal-history']">Your Deal</a>
-          </li>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand" [routerLink]="['home']">
+      <!-- <img src="assets/images/logo.jpg" width="150" height="80" alt=""> -->
+      CAR RENTAL SERVICE
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+      aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['home']"></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['deal-create']">Create Deal </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['deal-history']">Your Deal</a>
+        </li>
 
-          <li class="nav-item">
-            <a class="nav-link"  [routerLink]="['deal-search']">Search Car rental </a>
-          </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['deal-search']">Search Car rental </a>
+        </li>
 
-          <li class="nav-item">
-            <a class="nav-link" [routerLink]="['deal-offer']">Your Offer </a>
-          </li>
-
-        </ul>
-      </div>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['deal-offer']">Your Offer </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['login']">Login</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
