--- a/Frontend/src/app/create-deal/create-deal.component.html
+++ b/Frontend/src/app/create-deal/create-deal.component.html
@@ -6,7 +6,13 @@
       <div class="panel-body">Car Rental Register</div>
     </div>
     <div class="panel panel-primary">
-      <div class="panel-body">Panel Content</div>
+      <div class="panel-body">
+
+
+       
+
+
+      </div>
     </div>
   </div>
 
