--- a/Frontend/src/app/create-deal/create-deal.component.html
+++ b/Frontend/src/app/create-deal/create-deal.component.html
@@ -51,7 +51,8 @@
 
         <div>
           Phone-Number:
-          <input type="text" [formControlName]="pre"> - <input type="text" [formControlName]="mid"> - <input type="text" [formControlName]="last">
+          <input type="text" [formControlName]="pre"/> - <input type="text" [formControlName]="mid"/> - <input type="text"
+                                                                                                             [formControlName]="last"/>
 
         </div>
 
