--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -9,6 +9,7 @@
       aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarResponsive">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
@@ -29,7 +30,7 @@
           <a class="nav-link" [routerLink]="['deal-offer']">Your Offer </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['login']">Login</a>
+          <a class="nav-link" [routerLink]="['login']">Login{{user.name}}</a>
         </li>
       </ul>
     </div>
