--- a/Frontend/src/app/create-deal/create-deal.component.html
+++ b/Frontend/src/app/create-deal/create-deal.component.html
@@ -13,7 +13,9 @@
       <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
         <div>
           CarType:
-          <select formControlName="CarType">
+          <select formControlName="CarType" >
+
+
             <option value="">-- Rental Purpose --</option>
             <option value="Travel">Travel</option>
             <option value="Cargo">Cargo</option>
@@ -24,6 +26,8 @@
         <div>
           Departure:
           <select formControlName="Departure">
+            <option value="">-- FROM --</option>
+            <option *ngFor="let location of locations" value={{location.name}}>{{location.name}}</option>
           </select>
         </div>
 
@@ -31,9 +35,7 @@
           Destination:
           <select formControlName="Destination">
             <option value="">-- To --</option>
-            <option value="Des Moines">Des Moines</option>
-            <option value="Chicago">Chicago</option>
-            <option value="New York">New York</option>
+            <option *ngFor="let location of locations" value={{location.name}}>{{location.name}}</option>
           </select>
         </div>
 
