[IMP] Cardeal component

--- a/Frontend/src/app/create-deal/create-deal.component.html
+++ b/Frontend/src/app/create-deal/create-deal.component.html
@@ -41,12 +41,12 @@
 
         <div>
           Departure Date:
-          <input type="text" formControlName="Date">
+          <input type="date" formControlName="Date">
         </div>
 
         <div>
           Phone-Number:
-          <input type="text" formControlName="pre" /> - <input type="text" formControlName="mid" /> - <input type="text"
+          <input type="tel" formControlName="pre" /> - <input type="text" formControlName="mid" /> - <input type="text"
             formControlName="last" />
         </div>
 
