--- a/Frontend/src/app/dealsearch/dealsearch.component.html
+++ b/Frontend/src/app/dealsearch/dealsearch.component.html
@@ -6,7 +6,40 @@
       <div class="panel-body">Car Rental Search</div>
     </div>
     <div class="panel panel-default">
-      <div class="panel-body">Panel Content</div>
+      <div class="panel-body">
+
+          <table class="table table-bordered">
+              <thead>
+                <tr>
+                  <th style="width: 300px">Tittle</th>
+                  <th>Type</th>
+                  <th>Departure</th>
+                  <th>Destination</th>
+                  <th>DepartDate</th>
+                  <th>Offers</th>
+                  <th>Post Date</th>
+                  <th></th>
+                </tr>
+              </thead>
+              <tbody *ngFor="let post of cardealList">
+                <tr>
+                  <td>{{post.tittle}}</td>
+                  <td>{{post.dealtype}}</td>
+                  <td>{{post.fromlocation.locationname}}</td>
+                  <td>{{post.tolocation.locationname}}</td>
+                  <td>{{post.departureDate | date:'MM/dd/yyyy'}}</td>
+                  <td>{{post.bids.length}}</td>
+                  <td>{{post.createdDate | date:'MM/dd/yyyy'}}</td>
+                  <td><button class="btn-primary btn-xs">Offer</button></td>
+                </tr>
+              </tbody>
+            </table>
+
+        <!-- <div *ngFor="let post of cardealList">
+          <p> {{post.status}} </p>
+        </div> -->
+
+      </div>
     </div>
   </div>
 
