--- a/Frontend/src/app/deal-offer/deal-offer.component.html
+++ b/Frontend/src/app/deal-offer/deal-offer.component.html
@@ -2,10 +2,15 @@
 
   <div class="panel-group">
     <div class="panel panel-default">
-      <div class="panel-body">Car Rental Offer History</div>
+      <div class="panel-body">Car Rental Offer</div>
     </div>
     <div class="panel panel-default">
-      <div class="panel-body">Panel Content</div>
+      <div class="panel-body">
+      
+        
+      
+
+      </div>
     </div>
   </div>
 
