--- a/Frontend/src/app/dealsearch/dealsearch.component.html
+++ b/Frontend/src/app/dealsearch/dealsearch.component.html
@@ -1,47 +1,97 @@
 <div class="container">
 
-   
+
   <div class="panel-group">
     <div class="panel panel-primary">
       <div class="panel-body">Car Rental Search</div>
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
+       
+          <div class="row" style="margin: 5px">
+            <div class="col-md-3">
+              <select  class="form-control" (change)="onchangetype($event)">
+                <option value="">All</option>
+                <option value="Travel">Travel</option>
+                <option value="Cargo">Cargo</option>
+                <option value="Business">Business
+              </select>
+            </div>
+            <div class="col-md-3">
+              <select  class="form-control" (change)="onchangeFrom($event)">
+                <option value="">All</option>
+                <option *ngFor="let location of locations" value={{location.name}}>{{location.name}}</option>
+              </select>
+            </div>
+            <div class="col-md-3">
+              <select  class="form-control" (change)="onchangeTo($event)">
+                <option value="">All</option>
+                <option *ngFor="let location of locations" value={{location.name}}>{{location.name}}</option>
+              </select>
+            </div>
+            <div class="col-md-3">
+              <button type="button"  class=" btn btn-primary" (click)="onSearch()" >
+                Search
+              </button>
+            </div>
 
+
+
+          </div>
+
+      
+        <div class="row" style="margin: 5px">
           <table class="table table-bordered">
-              <thead>
-                <tr>
-                  <th style="width: 300px">Tittle</th>
-                  <th>Type</th>
-                  <th>Departure</th>
-                  <th>Destination</th>
-                  <th>DepartDate</th>
-                  <th>Offers</th>
-                  <th>Post Date</th>
-                  <th></th>
-                </tr>
-              </thead>
-              <tbody *ngFor="let post of cardealList">
-                <tr>
-                  <td>{{post.tittle}}</td>
-                  <td>{{post.dealtype}}</td>
-                  <td>{{post.fromlocation.locationname}}</td>
-                  <td>{{post.tolocation.locationname}}</td>
-                  <td>{{post.departureDate | date:'MM/dd/yyyy'}}</td>
-                  <td>{{post.bids.length}}</td>
-                  <td>{{post.createdDate | date:'MM/dd/yyyy'}}</td>
-                  <td><button class="btn-primary btn-xs">Offer</button></td>
-                </tr>
-              </tbody>
-            </table>
-
-        <!-- <div *ngFor="let post of cardealList">
-          <p> {{post.status}} </p>
-        </div> -->
+            <thead>
+              <tr>
+                <th style="width: 300px">Tittle</th>
+                <th>Type</th>
+                <th>Departure</th>
+                <th>Destination</th>
+                <th>DepartDate</th>
+                <th>Offers</th>
+                <th>Post Date</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody *ngFor="let post of cardealList">
+              <tr>
+                <td>{{post.tittle}}</td>
+                <td>{{post.dealtype}}</td>
+                <td>{{post.fromlocation.locationname}}</td>
+                <td>{{post.tolocation.locationname}}</td>
+                <td>{{post.departureDate | date:'MM/dd/yyyy'}}</td>
+                <td>{{post.bids.length}}</td>
+                <td>{{post.createdDate | date:'MM/dd/yyyy'}}</td>
+                <td>
+                  <button data-toggle="modal" data-target="#myModal">Offer</button>
+                </td>
+              </tr>
+            </tbody>`
+          </table>
+        </div>
 
       </div>
     </div>
   </div>
 
-  
+  <div id="myModal" class="modal fade" role="dialog">
+      <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Modal Header</h4>
+          </div>
+          <div class="modal-body">
+            <p>Some text in the modal.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+    
+      </div>
+    </div>
+
 </div>
