--- a/Frontend/src/app/create-deal/create-deal.component.html
+++ b/Frontend/src/app/create-deal/create-deal.component.html
@@ -7,6 +7,11 @@
       <div>
         <form [formGroup]="myForm" (ngSubmit)="onSubmit()">
           <div class="form-group">
+            <label class="col-sm-4 col-form-label">Title:</label>
+            <input class="col-sm-8" type="text" formControlName="Title" placeholder="Enter Titles"/>
+          </div>
+
+          <div class="form-group">
             <label class="col-sm-4 col-form-label">CarType:</label>
             <select formControlName="CarType" class="col-sm-8">
               <option value="" class="form-control">-- Rental Purpose --</option>
