--- a/Frontend/src/app/deal-offer/deal-offer.component.html
+++ b/Frontend/src/app/deal-offer/deal-offer.component.html
@@ -6,9 +6,7 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
-      
-        
-      
+       <div class="row">Deal code:</div>
 
       </div>
     </div>
