--- a/Frontend/src/app/deal-history/deal-history.component.html
+++ b/Frontend/src/app/deal-history/deal-history.component.html
@@ -5,7 +5,11 @@
       <div class="panel-body">Car Rental History</div>
     </div>
     <div class="panel panel-default">
-      <div class="panel-body">Panel Content</div>
+      <div class="panel-body">
+
+
+
+      </div>
     </div>
   </div>
 
