--- a/Frontend/src/app/deal-history/deal-history.component.html
+++ b/Frontend/src/app/deal-history/deal-history.component.html
@@ -6,9 +6,6 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
-
-
-
       </div>
     </div>
   </div>
@@ -16,58 +13,52 @@
 
   <div class="panel panel-default">
     <div class="panel-body">
-
-      <table class="table table-bordered" border="solid,1px," style="width: 300px;height: 100px">
+      <table class="table table-bordered" style="width: 300px;height: 100px; border: 1px solid black">
         <thead>
-        <tr>
-          <th>Request</th>
-          <th>Purpose</th>
-        </tr>
+          <tr>
+            <th>Request</th>
+            <th>Purpose</th>
+          </tr>
         </thead>
         <tbody *ngFor="let post of cardealList">
-        <tr>
+          <tr>
 
-          <td></td>
-          <td>
-            {{post.dealtype}}
-            <button class="btn-primary btn-xs">Detail</button>
-          </td>
+            <td></td>
+            <td>
+              {{post.dealtype}}
+              <button class="btn-primary btn-xs">Detail</button>
+            </td>
 
         </tbody>
       </table>
-
-
     </div>
 
     <div>
       <table class="table table-bordered">
         <thead>
-        <tr>
-          <th style="width: 300px">Tittle</th>
-          <th>Type</th>
-          <th>Departure</th>
-          <th>Destination</th>
-          <th>DepartDate</th>
-          <th>Offers</th>
-          <th>Post Date</th>
-          <th></th>
-        </tr>
+          <tr>
+            <th style="width: 300px">Tittle</th>
+            <th>Type</th>
+            <th>Departure</th>
+            <th>Destination</th>
+            <th>DepartDate</th>
+            <th>Offers</th>
+            <th>Post Date</th>
+            <th></th>
+          </tr>
         </thead>
         <tbody *ngFor="let post of cardealList">
-        <tr>
-          <td>{{post.tittle}}</td>
-          <td>{{post.dealtype}}</td>
-          <td>{{post.fromlocation.locationname}}</td>
-          <td>{{post.tolocation.locationname}}</td>
-          <td>{{post.departureDate | date:'MM/dd/yyyy'}}</td>
-          <td>{{post.bids.length}}</td>
-          <td>{{post.createdDate | date:'MM/dd/yyyy'}}</td>
-        </tr>
+          <tr>
+            <td>{{post.tittle}}</td>
+            <td>{{post.dealtype}}</td>
+            <td>{{post.fromlocation.locationname}}</td>
+            <td>{{post.tolocation.locationname}}</td>
+            <td>{{post.departureDate | date:'MM/dd/yyyy'}}</td>
+            <td>{{post.bids.length}}</td>
+            <td>{{post.createdDate | date:'MM/dd/yyyy'}}</td>
+          </tr>
         </tbody>
       </table>
     </div>
   </div>
-</div>
-
-
 </div>
