--- a/Frontend/src/app/deal-detail/deal-detail.component.html
+++ b/Frontend/src/app/deal-detail/deal-detail.component.html
@@ -36,13 +36,16 @@
     <div class="col">
       <div class="row">
         <h4>Driver Offers</h4>
-      <div class="row">
-        <div class="col-4"></div>
-        <div class="col"></div>
+      </div>
+      <div class="row" *ngFor="let offer of carDeal.bids">
+        <div class="col">{{offer.driverName}}</div>
+        <div class="col">{{offer.offerCost}}</div>
+        <div class="col"><button class="btn btn-primary">Confirm</button></div>
       </div>
     </div>
-  </div>
 
-  <div class="spinner" *ngIf="carDeal === undefined"><span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
-    Loading...</div>
+    <div class="spinner" *ngIf="carDeal === undefined"><span class="glyphicon glyphicon-refresh glyphicon-refresh-animate"></span>
+      Loading...</div>
+  </div>
+  <div #gmap style="width:100%;height:400px"></div>
 </div>
