--- a/Frontend/src/app/deal-history/deal-history.component.html
+++ b/Frontend/src/app/deal-history/deal-history.component.html
@@ -1,54 +1,29 @@
 <div class="container">
-
-  <div class="panel-group">
-    <div class="panel panel-default">
-      <div class="panel-body">Car Rental History</div>
-    </div>
-    <div class="panel panel-default">
-      <div class="panel-body">
-      </div>
-    </div>
-  </div>
-
+  <h2>Car Rental History</h2>
 
   <div class="panel panel-default">
     <div class="panel-body">
-      <table class="table table-bordered" style="width: 300px;height: 100px; border: 1px solid black">
+      <table class="table table-bordered" style="border: 1px solid black">
         <thead>
           <tr>
             <th>Request</th>
             <th>Purpose</th>
-          </tr>
-        </thead>
-        <tbody *ngFor="let post of cardealList">
-          <tr>
-
-            <td></td>
-            <td>
-              {{post.dealtype}}
-              <button class="btn-primary btn-xs">Detail</button>
-            </td>
-
-        </tbody>
-      </table>
-    </div>
-
-    <div>
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th style="width: 300px">Tittle</th>
+            <th style="width: 300px">Title</th>
             <th>Type</th>
             <th>Departure</th>
             <th>Destination</th>
             <th>DepartDate</th>
             <th>Offers</th>
             <th>Post Date</th>
-            <th></th>
           </tr>
         </thead>
-        <tbody *ngFor="let post of cardealList">
+        <tbody *ngFor="let post of carDealsList">
           <tr>
+            <td>{{post._id}}</td>
+            <td>
+              {{post.dealtype}}
+              <button class="btn-primary btn-xs">Detail</button>
+            </td>
             <td>{{post.tittle}}</td>
             <td>{{post.dealtype}}</td>
             <td>{{post.fromlocation.locationname}}</td>
@@ -56,7 +31,6 @@
             <td>{{post.departureDate | date:'MM/dd/yyyy'}}</td>
             <td>{{post.bids.length}}</td>
             <td>{{post.createdDate | date:'MM/dd/yyyy'}}</td>
-          </tr>
         </tbody>
       </table>
     </div>
