--- a/Frontend/src/assets/css/style.css
+++ b/Frontend/src/assets/css/style.css
@@ -13,7 +13,7 @@
   2. Header Area
    2.1 Stick menu Area
   3. About Area
-  4.Services Area
+  4.services Area
   5.Skill Area
   6.Faq Area
   7.Wellcome Area
@@ -501,7 +501,7 @@ div#preloader {
 
 /*--------------------------------*/
 
-/* 4.Services Area
+/* 4.services Area
 /*--------------------------------*/
 
 .services-icon {
