--- a/Frontend/src/app/deal-history/deal-history.component.html
+++ b/Frontend/src/app/deal-history/deal-history.component.html
@@ -17,20 +17,19 @@
             <th>Post Date</th>
           </tr>
         </thead>
-        <tbody *ngFor="let post of carDealsList">
+        <tbody *ngFor="let carDeal of carDealsList">
           <tr>
-            <td>{{post._id}}</td>
+            <td>{{carDeal._id}}</td>
             <td>
-              {{post.dealtype}}
-              <button class="btn-primary btn-xs">Detail</button>
+              {{carDeal.dealtype}}
             </td>
-            <td>{{post.tittle}}</td>
-            <td>{{post.dealtype}}</td>
-            <td>{{post.fromlocation.locationname}}</td>
-            <td>{{post.tolocation.locationname}}</td>
-            <td>{{post.departureDate | date:'MM/dd/yyyy'}}</td>
-            <td>{{post.bids.length}}</td>
-            <td>{{post.createdDate | date:'MM/dd/yyyy'}}</td>
+            <td>{{carDeal.tittle}}</td>
+            <td>{{carDeal.dealtype}}</td>
+            <td>{{carDeal.fromlocation.locationname}}</td>
+            <td>{{carDeal.tolocation.locationname}}</td>
+            <td>{{carDeal.departureDate | date:'MM/dd/yyyy'}}</td>
+            <td>{{carDeal.bids.length}}</td>
+            <td>{{carDeal.createdDate | date:'MM/dd/yyyy'}} <a class="nav-link" [routerLink]="['../deal-detail', carDeal._id]">Create Deal</a></td>
         </tbody>
       </table>
     </div>
