--- a/Frontend/src/app/dealsearch/dealsearch.component.html
+++ b/Frontend/src/app/dealsearch/dealsearch.component.html
@@ -8,10 +8,10 @@
     <div class="panel panel-default">
       <div class="panel-body">
        
-          <div class="row" style="margin: 5px">
+          <div class="row" style="margin-bottom: 5px">
             <div class="col-md-3">
               <select  class="form-control" (change)="onchangetype($event)">
-                <option value="">All</option>
+                <option value="0">All</option>
                 <option value="Travel">Travel</option>
                 <option value="Cargo">Cargo</option>
                 <option value="Business">Business
@@ -19,13 +19,13 @@
             </div>
             <div class="col-md-3">
               <select  class="form-control" (change)="onchangeFrom($event)">
-                <option value="">All</option>
+                <option value="0">All</option>
                 <option *ngFor="let location of locations" value={{location.name}}>{{location.name}}</option>
               </select>
             </div>
             <div class="col-md-3">
               <select  class="form-control" (change)="onchangeTo($event)">
-                <option value="">All</option>
+                <option value="0">All</option>
                 <option *ngFor="let location of locations" value={{location.name}}>{{location.name}}</option>
               </select>
             </div>
@@ -35,9 +35,13 @@
               </button>
             </div>
           </div>
+          
+        <div class="row">
+            <div class="col-md-12" style="color: red"> {{errorMsg}}</div>
+        </div>
 
-      
-        <div class="row" style="margin: 5px">
+        <div class="row" *ngIf="cardealList">
+          <div class="col-md-12">
           <table class="table table-bordered">
             <thead>
               <tr>
@@ -67,6 +71,7 @@
               </tr>
             </tbody>`
           </table>
+        </div>
         </div>
 
       </div>
