--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -6,7 +6,8 @@
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="email">Email address</label>
-          <input type="email" formControlName="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
+          <input type="email" formControlName="email" class="form-control" id="email" aria-describedby="emailHelp"
+            placeholder="Enter email">
         </div>
 
         <div class="form-group">
@@ -21,7 +22,6 @@
 
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
-
     </div>
   </div>
 </div>
