--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -32,6 +32,9 @@
         <li class="nav-item" *ngIf="user.name === ''">
           <a class="nav-link" [routerLink]="['login']">Login </a>
         </li>
+        <li class="nav-item" *ngIf="user.name !== ''">
+          <a class="nav-link" [routerLink]="['logout']">Logout </a>
+        </li>
       </ul>
     </div>
   </div>
