--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -27,7 +27,7 @@
         </li>
 
         <li class="nav-item" *ngIf="user.userType === 'driver'">
-          <a class="nav-link" [routerLink]="['deal-offer']">Your Offer </a>
+          <a class="nav-link" [routerLink]="['deal-offer-his']">Your Offer </a>
         </li>
         <li class="nav-item" *ngIf="user.name === ''">
           <a class="nav-link" [routerLink]="['login']">Login </a>
