--- a/Frontend/src/app/deal-offer/deal-offer.component.html
+++ b/Frontend/src/app/deal-offer/deal-offer.component.html
@@ -4,56 +4,65 @@
     <div class="panel panel-default">
       <div class="panel-body">Car Rental Offer</div>
     </div>
-    <div class="panel panel-default" *ngIf="dealDetail">
+    <div class="panel panel-default">
       <div class="panel-body">
 
         <div class="row">
-          <div class="col-md-3">Title : </div>
-          <div class="col-md-6">{{dealDetail.tittle}}</div>
-        </div>
 
-        <div class="row">
-            <div class="col-md-3">Deal Type : </div>
-            <div class="col-md-6">{{dealDetail.dealtype}}</div>
-          </div>
-
-        <div class="row">
-          <div class="col-md-3">Depart From: </div>
-          <div class="col-md-6">{{dealDetail.fromlocation.locationname}}</div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-3">Destination : </div>
-          <div class="col-md-6">{{dealDetail.tolocation.locationname}}</div>
-        </div>
-
-
-        <div class="row">
-          <div class="col-md-3">Departure Date : </div>
-          <div class="col-md-6">{{dealDetail.departureDate | date:'MM/dd/yyyy'}}</div>
-        </div>
-
-        <div class="row">
-          <div class="col-md-2">Offer Cost : </div>
           <div class="col-md-6">
-            <input value="$" #offerprice>
-            <button class="btn-xs btn-primary" (click)="onSendOffer(offerprice)" *ngIf="!msg">Send offer</button>
+            <div #gmap style="width:100%;height:400px"></div>
           </div>
-          <div class="col-md-4">
 
-          </div>
-        </div>
+          <div class="col-md-6" *ngIf="dealDetail">
 
-        <div class="row">
-          <div class="col-md-2"></div>
-          <div class="col-md-6">
-            {{msg}}
+            <div class="row">
+              <div class="col-md-3">Title : </div>
+              <div class="col-md-6">{{dealDetail.tittle}}</div>
             </div>
+
+            <div class="row">
+              <div class="col-md-3">Deal Type : </div>
+              <div class="col-md-6">{{dealDetail.dealtype}}</div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3">From: </div>
+              <div class="col-md-6">{{dealDetail.fromlocation.locationname}}</div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3">Destination : </div>
+              <div class="col-md-6">{{dealDetail.tolocation.locationname}}</div>
+            </div>
+
+
+            <div class="row">
+              <div class="col-md-3">Departure Date : </div>
+              <div class="col-md-6">{{dealDetail.departureDate | date:'MM/dd/yyyy'}}</div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3">Offer Cost : </div>
+              <div class="col-md-6">
+                <input value="$" #offerprice>
+                <button class="btn-xs btn-primary" (click)="onSendOffer(offerprice)">Send offer</button>
+              </div>
+              <div class="col-md-4">
+
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-md-3"></div>
+              <div class="col-md-6">
+                {{msg}}
+              </div>
+            </div>
+
+          </div>
         </div>
 
       </div>
     </div>
+
   </div>
-
-
-</div>
