--- a/Frontend/src/app/deal-offer/deal-offer.component.html
+++ b/Frontend/src/app/deal-offer/deal-offer.component.html
@@ -1,7 +1,9 @@
 <div class="container">
+
+  <h2>Car Rental Offer</h2>
   <div class="panel-group">
     <div class="panel panel-default">
-      <div class="panel-body">Car Rental Offer</div>
+      <div class="panel-body"></div>
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
