--- a/Frontend/src/app/dealsearch/dealsearch.component.html
+++ b/Frontend/src/app/dealsearch/dealsearch.component.html
@@ -1,7 +1,10 @@
 <div class="container">
+
+    <h2>Car Rental Search</h2>
+
   <div class="panel-group">
     <div class="panel panel-primary">
-      <div class="panel-body">Car Rental Search</div>
+      <div class="panel-body"></div>
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
