--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,8 +1,3 @@
-
-
-<app-header>    
-</app-header>
-
+<app-header></app-header>
 <div style="margin-top:100px;"></div>
-
 <router-outlet></router-outlet>
