--- a/Frontend/src/app/deal-offer/deal-offer.component.html
+++ b/Frontend/src/app/deal-offer/deal-offer.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-
   <h2>Car Rental Offer</h2>
   <div class="panel-group">
     <div class="panel panel-default">
@@ -7,62 +6,56 @@
     </div>
     <div class="panel panel-default">
       <div class="panel-body">
-
         <div class="row">
-
           <div class="col-md-6">
             <div #gmap style="width:100%;height:400px"></div>
           </div>
 
           <div class="col-md-6" *ngIf="dealDetail">
-
             <div class="row">
-              <div class="col-md-3">Title : </div>
+              <div class="col-md-4">Title : </div>
               <div class="col-md-6">{{dealDetail.tittle}}</div>
             </div>
 
             <div class="row">
-              <div class="col-md-3">Deal Type : </div>
+              <div class="col-md-4">Deal Type : </div>
               <div class="col-md-6">{{dealDetail.dealtype}}</div>
             </div>
 
             <div class="row">
-              <div class="col-md-3">From: </div>
+              <div class="col-md-4">From: </div>
               <div class="col-md-6">{{dealDetail.fromlocation.locationname}}</div>
             </div>
 
             <div class="row">
-              <div class="col-md-3">Destination : </div>
+              <div class="col-md-4">Destination : </div>
               <div class="col-md-6">{{dealDetail.tolocation.locationname}}</div>
             </div>
 
 
             <div class="row">
-              <div class="col-md-3">Departure Date : </div>
+              <div class="col-md-4">Departure Date : </div>
               <div class="col-md-6">{{dealDetail.departureDate | date:'MM/dd/yyyy'}}</div>
             </div>
 
             <div class="row">
-              <div class="col-md-3">Offer Cost : </div>
+              <div class="col-md-4">Offer Cost : </div>
               <div class="col-md-6">
-                <input value="$" #offerprice>
+                <input value="" #offerprice>
                 <button class="btn-xs btn-primary" (click)="onSendOffer(offerprice)">Send offer</button>
               </div>
               <div class="col-md-4">
-
               </div>
             </div>
 
             <div class="row">
-              <div class="col-md-3"></div>
+              <div class="col-md-4"></div>
               <div class="col-md-6">
                 {{msg}}
               </div>
             </div>
-
           </div>
         </div>
-
       </div>
     </div>
   </div>
