--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -3,6 +3,10 @@
     <div class="card-body">
       <h5 class="card-title">Login</h5>
 
+      <div class="alert alert-danger" role="alert" *ngIf="errMessage">
+        {{errMessage}}
+      </div>
+
       <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
         <div class="form-group">
           <label for="email">Email address</label>
@@ -15,12 +19,11 @@
           <input type="password" formControlName="password" class="form-control" id="password" placeholder="Password">
         </div>
 
-        <!-- <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="remember">
-              <label class="form-check-label" for="remember">Remember me</label>
-            </div> -->
-
         <button type="submit" class="btn btn-primary">Submit</button>
+
+        <div>
+          <p>Or<a style="display:inline" class="nav-link" [routerLink]="['../signup']">Sign up here</a></p>
+        </div>
       </form>
     </div>
   </div>
