--- a/Frontend/src/app/signup/signup.component.css
+++ b/Frontend/src/app/signup/signup.component.css
@@ -1,20 +1,20 @@
 .h-center {
-    margin: 0px auto;
+  margin: 128px auto 0px auto;
 }
 
 .success {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top:0px;
-    left: 0px;
-    z-index: 999999;
-    display: flex;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  left: 0px;
+  z-index: 999999;
+  display: flex;
 
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 
-    flex-direction: column;
+  flex-direction: column;
 
-    background-color: white;
+  background-color: white;
 }
